syntax = "proto2";
package crm;
option go_package = "etop.vn/backend/pb/services/crm";

import "protoc-gen-swagger/options/annotations.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = true;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "common/common.proto";
import "etop/etc/notifier_entity/entity.proto";

service MiscService {
    rpc VersionInfo(cm.Empty) returns (cm.VersionInfoResponse);
}

service CrmService {
    rpc RefreshFulfillmentFromCarrier (RefreshFulfillmentFromCarrierRequest) returns (cm.UpdatedResponse);

    rpc SendNotification (SendNotificationRequest) returns (cm.MessageResponse);
}

message RefreshFulfillmentFromCarrierRequest {
    // @required
    optional string shipping_code = 1 [(gogoproto.nullable) = false];
}

message SendNotificationRequest {
    optional int64 account_id = 1 [(gogoproto.nullable) = false];
    optional string title = 2 [(gogoproto.nullable) = false];
    optional string message = 3 [(gogoproto.nullable) = false];
    optional cm.RawJSONObject meta_data = 4 [(gogoproto.nullable) = false];
    optional notifier_entity.NotifierEntity entity = 5 [(gogoproto.nullable) = false];
    optional int64 entity_id = 6 [(gogoproto.nullable) = false];
}
